# local_ipfs

./: .dockerignore  .gitignore  .mise.toml  Cargo.toml  Makefile.toml  grafana_dashboard.json  readme.md  todo.txt
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/cli/src/commands/: config.rs  create_key.rs  error.rs  file.rs  mod.rs  ping.rs  util.rs
crates/cli/src/services/: encryption.rs
crates/integration_tests/: Cargo.toml
crates/integration_tests/src/: lib.rs  utils.rs
crates/integration_tests/test_macro/: Cargo.toml
crates/integration_tests/test_macro/src/: lib.rs
crates/integration_tests/tests/p2p/: test.rs
crates/server/: Cargo.toml
crates/server/src/: cli.rs  commands.rs  lib.rs  main.rs  network.rs  rpc.rs  server.rs  state.rs
crates/server/src/api/: ipfs.rs  metrics.rs  mod.rs  ping.rs  types.rs  util.rs
crates/server/src/commands/: error.rs  mod.rs  start_server.rs
crates/server/src/rpc/: error.rs  ipfs.rs  metrics.rs  mod.rs  ping.rs  util.rs
crates/server/src/server/: builder.rs  mod.rs  state.rs
docker/: compose.yaml
docker/configs/: prometheus.yml
docker/images/: builder.Dockerfile  server.Dockerfile
