[workspace]
resolver = "2"
members = [
    "crates/cli", 
    "crates/server",
]

[workspace.package]
name = "local_ipfs"
rust-version = "1.81.0"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
jsonrpsee = "0.24.4"
clap = "4.5.3"
tokio = "1.44.1"
tracing-subscriber = "0.3"
tracing = "0.1.40"
