[workspace]
resolver = "2"
members = [
    "crates/cli", 
    "crates/server",
]

[workspace.package]
rust-version = "1.81.0"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
jsonrpsee = "0.24.4"
clap = "4.5.3"
tokio = "1.44.1"
tracing-subscriber = "0.3"
tracing = "0.1.40"
thiserror = "2.0.12"
serde = "1.0.219"
