[workspace]
resolver = "2"
members = [
    "crates/server",
    "crates/cli"
]

[workspace.package]
rust-version = "1.81.0"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
bytes = "1.10.1"
clap = "4.5.3"
futures = "0.3.27"
jsonrpsee = "0.24.4"
reqwest = "0.12.15"
serde = "1.0.219"
serde_json = "1.0.140"
tempfile = "3.5.0"
thiserror = "2.0.12"
tokio = "1.44.1"
tracing = "0.1.40"
tracing-subscriber = "0.3"

server = { path = "crates/server" }
