[package]
name = "cli"
version.workspace = true
edition.workspace = true

[dependencies]
aead = { workspace = true , features = ["stream"] }
clap = { workspace = true, features = ["derive"] }
jsonrpsee = { workspace = true , features = ["client"] }
server = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
