[package]
name = "integration_tests"
edition.workspace = true
version.workspace = true

[dependencies]
futures = { workspace = true }
jsonrpsee = { workspace = true , features = ["client"] }
libp2p = { workspace = true }
rand = { version = "0.8.5" }
tracing-subscriber = { workspace = true , features = ["json"] }
tracing = { workspace = true, features = ["attributes"] }
tokio = { workspace = true, features = ["rt-multi-thread", "time", "macros"] }
serde = { workspace = true, features = ["derive"]}
serde_json = { workspace = true }

test_macro = { path = "./test_macro" }
server = { path = "../server" }

[features]
mock-ipfs = ["server/mock-ipfs"]

[[test]]
name = "p2p"
path = "tests/p2p/test.rs"
test = false
