[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonrpsee = { workspace = true , features = ["server", "macros", "client"] }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["signal"]}
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true, features = ["attributes"] }
serde = { workspace = true, features = ["derive"]}
thiserror = { workspace = true }
