[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true, features = ["derive"] }
jsonrpsee = { workspace = true , features = ["server", "macros", "client"] }
reqwest = { workspace = true, features = ["multipart", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal"]}
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true, features = ["attributes"] }
