[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
bytes = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
jsonrpsee = { workspace = true , features = ["server", "macros", "client"] }
reqwest = { workspace = true, features = ["multipart", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
